Changed the summary text at the bottom of data cleaning to a heading style

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -313,33 +313,13 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "   #To start, we knew we were going to use the world happiness report data so we narrowed down our choices in internet usage \n",
-    "#data to find a set that contained yearly breakdowns by country to go along with the world happiness data. \n",
+    "   To start, we knew we were going to use the world happiness report data so we narrowed down our choices in internet usage \n",
+    "data to find a set that contained yearly breakdowns by country to go along with the world happiness data. One thing we realized right away was that we would need a dataset with internet usage as a percentage of population as opposed to total population of users so that we would not just be analyzing which countries had the most people. Then we picked a year with the most recent data available in both sets to focus on for our graphs and analysis which was 2019. \n",
     "\n",
-    "#One thing we realized right away was that we would need a dataset with internet usage as a percentage of population \n",
-    "#as opposed to total population of users so that we would not just be analyzing which countries had the most people.  \n",
-    "\n",
-    "#Then we picked a year with the most recent data available in both sets to focus on for our graphs and analysis which was 2019. \n",
-    "\n",
-    "      \n",
-    "    #We ran into a few issues when trying to get the data frames merged. \n",
-    "\n",
-    "#Every year had its own csv and so its own data frame and we wanted to be able to look at individual years \n",
-    "#as well as having the option to look at changes over time for each country. \n",
-    "\n",
-    "#Keeping the data clean and readable required suffixes containing the year to be assigned to each data frame individually \n",
-    "#before merging all five years together and then finally merging it to the internet usage data. \n",
-    "\n",
-    "#We ended up with some unnamed columns and one country with missing internet usage data that we needed to remove \n",
-    "#before we could do any calculations. \n",
-    "\n",
-    "#Then we wrote the final merged data frame into a text file in order to \n",
-    "#open that file in another notebook for further analysis.\n"
+    "   We ran into a few issues when trying to get the data frames merged. Every year had its own csv and so its own data frame and we wanted to be able to look at individual years as well as having the option to look at changes over time for each country. Keeping the data clean and readable requiredsuffixes containing the year to be assigned to each data frame individually before merging all five years together and then finally merging it to the internet usage data. We ended up with some unnamed columns and one country with missing internet usage data that we needed to remove before we could do any calculations. Then we wrote the final merged data frame into a text file in order to open that file in another notebook for further analysis.\n"
    ]
   }
  ],
